# tiny-nn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
___todo/: bn.c  conv.c  reshape.c
example/cifar100_resnet/: cifar100.h  cnn.h  resnet.h  train.c
example/cifar10_resnet/: accuracy.h  cifar10.h  resnet.h  train.c
example/cifar_mlp/: eval.c  mlp.h  train.c
example/mnist_mlp/: accuracy.h  eval.c  mlp.h  mnist.h  train.c
include/tnn/: _optarg.h  tnn.h
src/: backprop.c  state.c  tensor.c  tnn.c
src/impl/: alloc_tensor.h  globals.h  key_str_utils.h  malloc.h  param_table.h  scope_str_utils.h  state.h  toposort.h
src/ops/: add.c  bias.c  bn.c  conv.c  cross_entropy.c  mean.c  proj.c  relu.c  reshape.c
src/optim/: adamw.c
